Fixed some spacing

--- a/app/assets/stylesheets/map.css
+++ b/app/assets/stylesheets/map.css
@@ -63,6 +63,10 @@ div.category-table-container td {
     padding-top: 0px;
 }
 
+span {
+    padding:0px;
+}
+
 #tabs li {
     width:25%;
 }
